# 72_2_license_llm_how

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  research_plan.md
code_work/: analysis_refactoring_plan.md  experiment_manual.md
code_work/configs/: analysis_config.yaml  config.yaml  test_config.yaml
code_work/scripts/: analysis.py  prompts.py  run_experiment.py
code_work/src/: GUI_사용가이드.md  README_mapping.md  analyze_pdf_structure.py  illustration_text_extractor.py  illustration_text_extractor_v2.py  llm_client.py  mapping_validator.py  ox_generation.py  pdf_image_extractor.py  run_gui_correction.py  run_mapping.py  text_extractor_from_pdf.py
